--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -10,9 +10,10 @@ html {
 }
 
 body {
-  min-width: 320px;
+  min-width: 36rem;
   min-height: 100vh;
-  background-color: #333;
+  height: 100%;
+  background-color: var(--background-primary);
   overflow-x: hidden;
 }
 
