--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -10,10 +10,9 @@ html {
 }
 
 body {
-  min-width: 36rem;
+  min-width: 320px;
   min-height: 100vh;
-  height: 100%;
-  background-color: var(--background-primary);
+  background-color: #333;
   overflow-x: hidden;
 }
 
