--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -1,35 +1,18 @@
-@use '../abstracts/media' as media;
-
 .app {
-  --top: var(--container-padding-x);
-  --right: var(--container-padding-x);
-
-  position: relative;
+  display: flex;
   width: 100%;
   height: 100vh;
-  padding: 5rem 0;
-
-  @include media.mobile {
-    padding: 3.5rem 0;
-  }
-
-  &__container {
-    display: grid;
-    row-gap: 2.5rem;
-
-    @include media.mobile {
-      row-gap: 1.5rem;
-    }
-  }
-
-  &__settings-button {
-    position: absolute;
-    top: var(--top);
-    right: var(--right);
-  }
+  justify-content: center;
+  align-items: center;
+  background-image: url('../img/background.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 
   &__title {
-    margin: 0 auto;
-    font-size: var(--fonts-size-lg);
+    font-family: 'Roboto';
+    font-weight: 700;
+    font-size: 100px;
+    color: #f9f9f9;
   }
 }
