Replace dialog with overlay

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -34,6 +34,7 @@
   --background-primary: var(--gray-darken);
   --background-secondary: var(--gray-dark);
   --background-accent: var(--accent);
+  --background-overlay: rgb(50 50 50 / 0.7);
 
   --border-color: var(--gray-light);
 
