--- a/src/scss/components/_counter.scss
+++ b/src/scss/components/_counter.scss
@@ -1,6 +1,6 @@
 @use '../abstracts/media' as media;
 
-.pomodoro-counter {
+.counter {
   --width: 2.25rem;
   --height: 2.25rem;
   --padding: 0.75rem;
@@ -31,14 +31,11 @@
     display: flex;
     align-items: center;
     column-gap: 0.375rem;
+    font-size: var(--font-size-md);
 
     & svg {
       width: 1.25rem;
       color: var(--text-accent);
     }
-  }
-
-  &__count {
-    font-size: var(--font-size-md);
   }
 }
