--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -1,9 +1,9 @@
 @forward './checkbox';
+@forward './buttons';
 @forward './form';
 @forward './select';
-@forward './buttons';
+@forward './counter';
 @forward './no-tasks';
 @forward './task';
-@forward './pomodoro-counter';
-@forward './pomodoro-settings';
+@forward './settings';
 @forward './timer';
