--- a/src/scss/components/_timer.scss
+++ b/src/scss/components/_timer.scss
@@ -2,22 +2,27 @@
 @use '../abstracts/media' as media;
 
 .timer {
+  position: relative;
   display: grid;
-  grid-template-columns: 30rem;
+  grid-template-columns: 24rem;
   place-items: center;
   row-gap: 3rem;
+  padding: 3.75rem 2.25rem;
   font-weight: var(--font-weight-medium);
+  border-radius: var(--border-radius-lg);
+  background-color: var(--background-primary);
 
   @include media.mobile {
-    grid-template-columns: 24rem;
+    grid-template-columns: 16rem;
     row-gap: 2rem;
+    padding: 2.75rem 1.75rem;
   }
 
   &__title {
     font-size: var(--font-size-md);
   }
 
-  &__container {
+  &__content {
     position: relative;
   }
 
@@ -41,7 +46,7 @@
       content: '';
       position: absolute;
       inset: 0;
-      z-index: -1;
+      z-index: 110;
       width: 100%;
       height: 100%;
       border-radius: 50%;
@@ -56,7 +61,7 @@
       position: absolute;
       top: var(--border-width);
       left: var(--border-width);
-      z-index: -1;
+      z-index: 111;
       width: calc(100% - var(--border-width) * 2);
       height: calc(100% - var(--border-width) * 2);
       border-radius: 50%;
@@ -68,6 +73,7 @@
     position: absolute;
     top: 50%;
     left: 50%;
+    z-index: 112;
     translate: -50% -50%;
     font-size: var(--fonts-size-lg);
     letter-spacing: 0.125rem;
@@ -76,11 +82,12 @@
   &__button {
     width: unset;
     height: unset;
-    padding: 0.75rem 2rem;
+    padding: 0.75rem 1.75rem;
     font-size: var(--font-size-md);
+    text-transform: uppercase;
 
     @include media.mobile {
-      padding: 0.5rem 1.5rem;
+      padding: 0.5rem 1.25rem;
     }
   }
 }
