--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -51,12 +51,12 @@
       width: 75%;
       height: 75%;
 
-      path:first-child {
-        fill: var(--background-accent);
+      &:first-child {
+        fill: var(--accent);
       }
 
-      path:last-child {
-        fill: var(--background-primary);
+      &:last-child {
+        fill: var(--gray-darken);
       }
     }
   }
