--- a/src/scss/components/_select.scss
+++ b/src/scss/components/_select.scss
@@ -8,20 +8,20 @@
 .select {
   appearance: none;
   max-width: min-content;
-  padding: 0.75rem;
-  padding-right: 1.875rem;
+  padding: 0.625rem;
   font-size: var(--font-size-md);
   font-weight: var(--font-weight-medium);
   line-height: 1;
+  text-align: center;
   text-transform: lowercase;
   border: 2px solid transparent;
   border-radius: var(--border-radius-md);
   color: var(--text-primary);
-  background-color: var(--background-accent);
+  background-color: var(--background-secondary);
   @include mixins.transition(box-shadow);
 
   @include media.mobile {
-    padding: 0.625rem;
+    padding: 0.375rem;
   }
 
   @include mixins.hover {
