--- a/src/scss/components/_counter.scss
+++ b/src/scss/components/_counter.scss
@@ -1,30 +1,127 @@
+@use '../abstracts/mixins' as mixins;
 @use '../abstracts/media' as media;
 
 .counter {
-  --width: 2.25rem;
-  --height: 2.25rem;
-  --padding: 0.75rem;
-
+  position: relative;
   display: flex;
-  min-width: max-content;
-  align-items: center;
-  column-gap: 0.75rem;
-  padding: 0.25rem;
-  border: 2px solid var(--text-accent);
-  border-radius: var(--border-radius-md);
+  height: 75%;
+  column-gap: 0.375rem;
+  padding-right: 0.5rem;
+  border-right: 2px solid var(--border-color);
 
   @include media.mobile {
-    --width: 1.75rem;
-    --height: 1.75rem;
+    column-gap: 0.25rem;
+  }
 
-    column-gap: 0.375rem;
+  &__label {
+    display: flex;
+    align-items: center;
+    color: var(--text-placeholder);
+
+    @include mixins.hover {
+      svg {
+        filter: var(--drop-shadow);
+      }
+    }
+  }
+
+  &__radio {
+    @include mixins.visually-hidden;
+
+    @include mixins.focus {
+      & + .counter__label {
+        outline: var(--outline);
+        outline-offset: var(--outline-offset);
+      }
+    }
+  }
+
+  &__open-popup {
+    color: var(--text-placeholder);
+    @include mixins.transition(color, filter);
+
+    @include mixins.hover {
+      svg {
+        filter: var(--drop-shadow);
+      }
+    }
+
+    @include mixins.focus {
+      outline: var(--outline);
+      outline-offset: var(--outline-offset);
+    }
+  }
+
+  & svg {
+    width: 1.5rem;
+    height: 1.5rem;
+
+    @include media.mobile {
+      width: 1.25rem;
+      height: 1.25rem;
+    }
+  }
+
+  &__popup {
+    --width: 2rem;
+    --height: 2rem;
+    --padding: 0.75rem;
+
+    position: absolute;
+    top: 120%;
+    right: -30%;
+    display: none;
+    min-width: max-content;
+    align-items: center;
+    column-gap: 0.75rem;
+    padding: 0.25rem;
+    background-color: var(--background-secondary);
+    border-radius: var(--border-radius-md);
+
+    @include media.mobile {
+      --width: 1.25rem;
+      --height: 1.25rem;
+      --padding: 0.5rem;
+
+      right: -24%;
+      column-gap: 0.375rem;
+    }
+
+    &--is-open {
+      display: flex;
+    }
+
+    &:before {
+      content: '';
+      position: absolute;
+      top: -0.375rem;
+      left: 50%;
+      transform: translateX(-50%) rotate(45deg);
+      width: 0.75rem;
+      height: 0.75rem;
+      background-image: conic-gradient(
+        from 45deg at 50% 50%,
+        transparent 0deg,
+        transparent 180deg,
+        var(--background-secondary) 180deg,
+        var(--background-secondary) 360deg
+      );
+
+      @include media.mobile {
+        width: 0.5rem;
+        height: 0.5rem;
+        top: -0.3rem;
+      }
+    }
   }
 
   &__button {
     width: var(--width);
     height: var(--height);
     padding: var(--padding);
+    font-weight: var(--font-weight-regular);
     font-size: var(--font-size-md);
+    background-color: var(--background-secondary);
   }
 
   &__value {
@@ -33,15 +130,28 @@
     column-gap: 0.375rem;
     font-size: var(--font-size-md);
 
+    @include media.mobile {
+      column-gap: 0.25rem;
+    }
+
     & svg {
       width: 1.25rem;
       height: 1.25rem;
       color: var(--text-accent);
+
+      @include media.mobile {
+        width: 1rem;
+        height: 1rem;
+      }
     }
   }
 
   &__display {
     width: 1.25rem;
     text-align: center;
+
+    @include media.mobile {
+      width: 1rem;
+    }
   }
 }
