--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -2,25 +2,16 @@
 @use '../abstracts/media' as media;
 
 .form {
-  display: flex;
-  align-items: center;
-  gap: 1.5rem;
-  width: 100%;
-
-  @include media.tablet {
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-
-  @include media.mobile {
-    gap: 1rem;
+  &__input-wrapper {
+    position: relative;
+    width: 100%;
   }
 
   &__input {
-    flex-grow: 1;
     width: 100%;
     padding: 0.75rem;
     padding-left: 1.5rem;
+    padding-right: 30%;
     font-size: var(--font-size-md);
     font-weight: var(--font-weight-regular);
     line-height: 1;
@@ -33,6 +24,7 @@
     @include media.mobile {
       padding: 0.5rem;
       padding-left: 1rem;
+      padding-right: 20%;
     }
 
     @include mixins.hover {
@@ -46,6 +38,29 @@
 
     &::placeholder {
       color: var(--text-placeholder);
+    }
+  }
+
+  &__addon {
+    position: absolute;
+    top: 50%;
+    right: 0;
+    translate: 0 -50%;
+    display: flex;
+    align-items: center;
+    column-gap: 1rem;
+    height: 100%;
+    padding-inline: 0.75rem;
+    border-radius: var(--border-radius-md);
+
+    @include media.tablet {
+      column-gap: 0.75rem;
+      padding-inline: 0.5rem;
+    }
+
+    @include media.tablet {
+      column-gap: 0.7rem;
+      padding-inline: 0.375rem;
     }
   }
 }
