Redesign select appearance

--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -1,7 +1,7 @@
 @forward './checkbox';
 @forward './buttons';
 @forward './form';
-@forward './select';
+@forward './choices';
 @forward './counter';
 @forward './no-tasks';
 @forward './task';
