--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -13,7 +13,7 @@ body {
   min-width: 36rem;
   min-height: 100vh;
   height: 100%;
-  background-color: var(--background-primary);
+  background-image: var(--background-gradient);
   overflow-x: hidden;
 }
 
