--- a/src/scss/components/_choices.scss
+++ b/src/scss/components/_choices.scss
@@ -9,12 +9,29 @@
 
   position: relative;
   overflow: hidden;
+  border-radius: var(--border-radius-xsm);
+  @include mixins.transition(box-shadow);
+
+  @include media.tablet {
+    --padding-left: 0.425rem;
+    --padding-right: 1.375rem;
+    --padding-top: 0.325rem;
+    --padding-bottom: 0.325rem;
+  }
 
   @include media.mobile {
     --padding-left: 0.325rem;
     --padding-right: 1.25rem;
     --padding-top: 0.25rem;
     --padding-bottom: 0.25rem;
+  }
+
+  @include mixins.hover {
+    box-shadow: var(--box-shadow);
+
+    &.is-open {
+      box-shadow: unset;
+    }
   }
 
   @include mixins.focus {
@@ -31,7 +48,7 @@
   }
 
   &.is-disabled &__inner {
-    background-color: var(--background-secondary);
+    background-color: var(--background-primary);
     cursor: not-allowed;
     user-select: none;
   }
@@ -61,7 +78,7 @@
     height: 0;
     border-width: 5px;
     border-style: solid;
-    border-color: var(--background-secondary) transparent transparent transparent;
+    border-color: var(--background-primary) transparent transparent transparent;
     pointer-events: none;
 
     @include media.mobile {
@@ -71,7 +88,11 @@
 
   &[data-type*='select-one'].is-open::after {
     margin-top: -8px;
-    border-color: transparent transparent var(--background-secondary);
+    border-color: transparent transparent var(--background-primary);
+
+    @include media.mobile {
+      margin-top: -7px;
+    }
 
     @include media.mobile {
       margin-top: -6px;
@@ -83,8 +104,9 @@
     width: 100%;
     height: 100%;
     padding: var(--padding-top) var(--padding-right) var(--padding-bottom) var(--padding-left);
+    border: 1px solid var(--border-color);
     border-radius: var(--border-radius-xsm);
-    background-color: var(--background-secondary);
+    background-color: var(--background-primary);
     overflow: hidden;
   }
 
@@ -97,14 +119,24 @@
   &__list[aria-expanded] {
     position: absolute;
     top: 100%;
-    z-index: 1;
     display: none;
     width: 100%;
+    padding-block: 0.325rem;
     word-break: break-all;
     border: 1px solid var(--border-color);
+    border-top: none;
     border-radius: var(--border-radius-xsm);
-    background-color: var(--background-secondary);
+    background-color: var(--background-primary);
+    backdrop-filter: var(--blur);
     overflow: hidden;
+
+    @include media.tablet {
+      padding-block: 0.25rem;
+    }
+
+    @include media.mobile {
+      padding-block: 0.25rem;
+    }
   }
 
   &__list--dropdown.is-active,
@@ -128,6 +160,10 @@
     padding: 0.425rem;
     border-radius: var(--border-radius-xsm);
 
+    @include media.tablet {
+      padding: 0.325rem;
+    }
+
     @include media.mobile {
       padding: 0.25rem;
     }
@@ -135,7 +171,7 @@
 
   &__list--dropdown &__item--selectable.is-highlighted,
   &__list[aria-expanded] &__item--selectable.is-highlighted {
-    background-color: var(--background-secondary);
+    background-color: var(--background-primary);
   }
 
   &__list--dropdown &__item--selectable.is-selected::after,
@@ -159,6 +195,11 @@
   &__icon {
     width: 1.5rem;
     height: 1.5rem;
+
+    @include media.tablet {
+      width: 1.325rem;
+      height: 1.325rem;
+    }
 
     @include media.mobile {
       width: 1.25rem;
