--- a/src/scss/components/_counter.scss
+++ b/src/scss/components/_counter.scss
@@ -9,6 +9,10 @@
   padding-right: 0.5rem;
   border-right: 2px solid var(--border-color);
 
+  @include media.tablet {
+    column-gap: 0.325rem;
+  }
+
   @include media.mobile {
     column-gap: 0.25rem;
   }
@@ -56,6 +60,11 @@
     width: 1.5rem;
     height: 1.5rem;
 
+    @include media.tablet {
+      width: 1.325rem;
+      height: 1.325rem;
+    }
+
     @include media.mobile {
       width: 1.25rem;
       height: 1.25rem;
@@ -68,15 +77,26 @@
     --padding: 0.75rem;
 
     position: absolute;
-    top: 120%;
+    top: 115%;
     right: -30%;
     display: none;
     min-width: max-content;
     align-items: center;
     column-gap: 0.75rem;
     padding: 0.25rem;
-    background-color: var(--background-secondary);
+    border: 1px solid var(--border-color);
     border-radius: var(--border-radius-md);
+    background-color: var(--background-primary);
+    backdrop-filter: var(--blur);
+
+    @include media.tablet {
+      --width: 1.75rem;
+      --height: 1.75rem;
+      --padding: 0.625rem;
+
+      right: -26%;
+      column-gap: 0.5rem;
+    }
 
     @include media.mobile {
       --width: 1.25rem;
@@ -94,18 +114,26 @@
     &:before {
       content: '';
       position: absolute;
-      top: -0.375rem;
+      top: -0.425rem;
       left: 50%;
       transform: translateX(-50%) rotate(45deg);
       width: 0.75rem;
       height: 0.75rem;
+      border-top: 1px solid var(--border-color);
+      border-left: 1px solid var(--border-color);
       background-image: conic-gradient(
         from 45deg at 50% 50%,
         transparent 0deg,
         transparent 180deg,
-        var(--background-secondary) 180deg,
-        var(--background-secondary) 360deg
+        var(--background-primary) 180deg,
+        var(--background-primary) 360deg
       );
+
+      @include media.tablet {
+        width: 0.625rem;
+        height: 0.625rem;
+        top: -0.375rem;
+      }
 
       @include media.mobile {
         width: 0.5rem;
@@ -121,7 +149,8 @@
     padding: var(--padding);
     font-weight: var(--font-weight-regular);
     font-size: var(--font-size-md);
-    background-color: var(--background-secondary);
+    border: 1px solid var(--border-color);
+    background-color: var(--background-primary);
   }
 
   &__value {
@@ -129,6 +158,10 @@
     align-items: center;
     column-gap: 0.375rem;
     font-size: var(--font-size-md);
+
+    @include media.tablet {
+      column-gap: 0.325rem;
+    }
 
     @include media.mobile {
       column-gap: 0.25rem;
@@ -139,6 +172,11 @@
       height: 1.25rem;
       color: var(--text-accent);
 
+      @include media.tablet {
+        width: 1.125rem;
+        height: 1.125rem;
+      }
+
       @include media.mobile {
         width: 1rem;
         height: 1rem;
@@ -147,11 +185,15 @@
   }
 
   &__display {
-    width: 1.25rem;
+    width: 1rem;
     text-align: center;
 
+    @include media.tablet {
+      width: 0.75rem;
+    }
+
     @include media.mobile {
-      width: 1rem;
+      width: 0.625rem;
     }
   }
 }
