--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -15,11 +15,17 @@
     font-size: var(--font-size-md);
     font-weight: var(--font-weight-regular);
     line-height: 1;
-    border: none;
+    border: 1px solid var(--border-color);
     border-radius: var(--border-radius-md);
     color: var(--text-primary);
-    background-color: var(--background-secondary);
+    background-color: var(--background-primary);
     @include mixins.transition(box-shadow);
+
+    @include media.tablet {
+      padding: 0.625rem;
+      padding-left: 1.25rem;
+      padding-right: 25%;
+    }
 
     @include media.mobile {
       padding: 0.5rem;
@@ -58,8 +64,8 @@
       padding-inline: 0.5rem;
     }
 
-    @include media.tablet {
-      column-gap: 0.7rem;
+    @include media.mobile {
+      column-gap: 0.5rem;
       padding-inline: 0.375rem;
     }
   }
