--- a/src/scss/components/_timer.scss
+++ b/src/scss/components/_timer.scss
@@ -9,8 +9,15 @@
   row-gap: 3rem;
   padding: 3.75rem 2.25rem;
   font-weight: var(--font-weight-medium);
+  border: 1px solid var(--border-color);
   border-radius: var(--border-radius-lg);
   background-color: var(--background-primary);
+
+  @include media.tablet {
+    grid-template-columns: 20rem;
+    row-gap: 2.5rem;
+    padding: 3.25rem 2rem;
+  }
 
   @include media.mobile {
     grid-template-columns: 16rem;
@@ -34,12 +41,18 @@
     width: 18rem;
     height: 18rem;
 
+    @include media.tablet {
+      --border-width: 14px;
+
+      width: 16rem;
+      height: 16rem;
+    }
+
     @include media.mobile {
       --border-width: 12px;
 
       width: 14rem;
       height: 14rem;
-      letter-spacing: 0.075rem;
     }
 
     &:before {
@@ -52,7 +65,7 @@
       border-radius: 50%;
       background-image: conic-gradient(
         var(--accent) var(--angle),
-        var(--background-secondary) var(--angle)
+        var(--background-primary) var(--angle)
       );
     }
 
@@ -85,6 +98,10 @@
     padding: 0.75rem 1.75rem;
     font-size: var(--font-size-md);
     text-transform: uppercase;
+
+    @include media.tablet {
+      padding: 0.625rem 1.5rem;
+    }
 
     @include media.mobile {
       padding: 0.5rem 1.25rem;
