--- a/src/scss/layout/_container.scss
+++ b/src/scss/layout/_container.scss
@@ -1,5 +1,6 @@
 .container {
   max-width: calc(var(--container-width) + var(--container-padding-x) * 2);
+  width: 100%;
   padding: 0 var(--container-padding-x);
   margin: 0 auto;
 }
