Redesign timer animation

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -29,9 +29,9 @@
   --text-accent: var(--accent);
 
   --background-primary: var(--gray-dark);
+  --background-secondary: #292d32;
   --background-accent: var(--accent);
   --background-gradient: radial-gradient(circle, rgb(252 156 89 / 0.55) 0%, rgb(138 53 184 / 0.45) 100%);
-  --background-linear: linear-gradient(45deg, rgb(252 156 89 / 0.5) 0%, rgb(138 53 184 / 0.35) 100%);
 
   --border-color: rgb(0 0 0 / 0.1);
 
