--- a/src/scss/components/_settings.scss
+++ b/src/scss/components/_settings.scss
@@ -7,7 +7,7 @@
   width: 100%;
   padding: 3.75rem 2.25rem;
   border: 1px solid var(--border-color);
-  border-radius: var(--border-radius-lg);
+  border-radius: var(--border-radius-xlg);
   color: var(--text-primary);
   background-color: var(--background-primary);
 
