--- a/src/scss/components/_counter.scss
+++ b/src/scss/components/_counter.scss
@@ -27,6 +27,10 @@
         filter: var(--drop-shadow);
       }
     }
+
+    &.selected {
+      color: var(--text-accent);
+    }
   }
 
   &__radio {
