style: Update background and colors
* Add background-image to the body element
* Update --accent and --gray-dark color variables
* Adjust blur effect
* Increase padding-top for the app__content
* Hide the title element (add class visually-hidden for h1)

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -13,8 +13,19 @@ body {
   min-width: 36rem;
   min-height: 100vh;
   height: 100%;
-  background-image: var(--background-gradient);
+  background-image: url(../img/background.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   overflow-x: hidden;
+
+  &::after {
+    content: '';
+    position: absolute;
+    z-index: -1;
+    inset: 0;
+    background-color: rgb(255 255 255 / 0.1);
+  }
 }
 
 ul,
