--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -50,7 +50,7 @@
 
   /* Outline */
   --outline: 2px solid var(--gray-light);
-  --outline-offset: 2px;
+  --outline-offset: 1px;
 }
 
 @media (max-width: 768px) {
@@ -66,6 +66,9 @@
     --border-radius-md: 0.75rem;
     --border-radius-sm: 0.625rem;
     --border-radius-xsm: 0.425rem;
+
+    /* Outline */
+    --outline-offset: 0.5px;
   }
 }
 
@@ -81,5 +84,8 @@
     --border-radius-lg: 1rem;
     --border-radius-md: 0.625rem;
     --border-radius-sm: 0.5rem;
+
+    /* Outline */
+    --outline-offset: 0;
   }
 }
