--- a/src/scss/components/_counter.scss
+++ b/src/scss/components/_counter.scss
@@ -6,8 +6,6 @@
   display: flex;
   height: 75%;
   column-gap: 0.375rem;
-  padding-right: 0.5rem;
-  border-right: 2px solid var(--border-color);
 
   @include media.tablet {
     column-gap: 0.325rem;
@@ -21,6 +19,12 @@
     display: inline-flex;
     align-items: center;
     color: var(--text-placeholder);
+
+    @include media.mobile {
+      &:nth-child(-n + 2) {
+        display: none;
+      }
+    }
 
     @include mixins.hover {
       svg {
@@ -65,13 +69,13 @@
   }
 
   &__popup {
-    --width: 2rem;
-    --height: 2rem;
+    --width: 2.25rem;
+    --height: 2.25rem;
     --padding: 0.75rem;
 
     position: absolute;
-    top: 115%;
-    right: -30%;
+    top: 125%;
+    right: -25%;
     display: none;
     min-width: max-content;
     align-items: center;
@@ -83,8 +87,8 @@
     backdrop-filter: var(--blur);
 
     @include media.tablet {
-      --width: 1.75rem;
-      --height: 1.75rem;
+      --width: 2rem;
+      --height: 2rem;
       --padding: 0.625rem;
 
       right: -26%;
@@ -92,8 +96,8 @@
     }
 
     @include media.mobile {
-      --width: 1.25rem;
-      --height: 1.25rem;
+      --width: 1.5rem;
+      --height: 1.5rem;
       --padding: 0.5rem;
 
       right: -24%;
@@ -102,37 +106,6 @@
 
     &--is-open {
       display: flex;
-    }
-
-    &:before {
-      content: '';
-      position: absolute;
-      top: -0.425rem;
-      left: 50%;
-      transform: translateX(-50%) rotate(45deg);
-      width: 0.75rem;
-      height: 0.75rem;
-      border-top: 1px solid var(--border-color);
-      border-left: 1px solid var(--border-color);
-      background-image: conic-gradient(
-        from 45deg at 50% 50%,
-        transparent 0deg,
-        transparent 180deg,
-        var(--background-primary) 180deg,
-        var(--background-primary) 360deg
-      );
-
-      @include media.tablet {
-        width: 0.625rem;
-        height: 0.625rem;
-        top: -0.375rem;
-      }
-
-      @include media.mobile {
-        width: 0.5rem;
-        height: 0.5rem;
-        top: -0.3rem;
-      }
     }
   }
 
