--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -11,7 +11,7 @@
     width: 100%;
     padding: 0.75rem;
     padding-left: 1.5rem;
-    padding-right: 30%;
+    padding-right: 55%;
     font-size: var(--font-size-md);
     font-weight: var(--font-weight-regular);
     line-height: 1;
@@ -24,13 +24,13 @@
     @include media.tablet {
       padding: 0.625rem;
       padding-left: 1.25rem;
-      padding-right: 25%;
+      padding-right: 60%;
     }
 
     @include media.mobile {
       padding: 0.5rem;
       padding-left: 1rem;
-      padding-right: 20%;
+      padding-right: 50%;
     }
 
     @include mixins.hover {
@@ -47,26 +47,75 @@
     }
   }
 
-  &__addon {
+  &__control {
     position: absolute;
     top: 50%;
     right: 0;
     translate: 0 -50%;
     display: flex;
     align-items: center;
-    column-gap: 1rem;
+    column-gap: 0.75rem;
     height: 100%;
-    padding-inline: 0.75rem;
+    padding-inline: 0.5rem;
     border-radius: var(--border-radius-md);
 
     @include media.tablet {
-      column-gap: 0.75rem;
-      padding-inline: 0.5rem;
+      column-gap: 0.625rem;
+      padding-inline: 0.425rem;
     }
 
     @include media.mobile {
       column-gap: 0.5rem;
-      padding-inline: 0.375rem;
+      padding-inline: 0.35rem;
+    }
+  }
+
+  &__addon {
+    display: flex;
+    align-items: center;
+    column-gap: 0.75rem;
+    height: 90%;
+    padding-inline: 0.5rem;
+    border: 1px solid var(--border-color);
+    border-radius: var(--border-radius-xsm);
+
+    @include media.tablet {
+      column-gap: 0.625rem;
+    }
+
+    @include media.mobile {
+      column-gap: 0.5rem;
+    }
+  }
+
+  &__counter {
+    padding-right: 0.5rem;
+    border-right: 1px solid var(--border-color);
+
+    @include media.tablet {
+      padding-right: 0.375rem;
+    }
+
+    @include media.mobile {
+      padding-right: 0.25rem;
+    }
+  }
+
+  &__button {
+    --width: 2.5rem;
+    --height: 2.5rem;
+
+    width: var(--width);
+    height: var(--height);
+
+    @include media.tablet {
+      --width: 2.25rem;
+      --height: 2.25rem;
+    }
+
+    @include media.mobile {
+      --width: 2rem;
+      --height: 2rem;
     }
   }
 }
