feat(overlay): Add background image
* Create transparent-overlay mixin to style the overlay.
* Apply mixin to overlay element and set background image.
* Remove backdrop-filter from overlay to avoid visual conflicts.
* Add backdrop-filter to settings and timer for blur effect.

--- a/src/scss/components/_timer.scss
+++ b/src/scss/components/_timer.scss
@@ -12,6 +12,7 @@
   border: 1px solid var(--border-color);
   border-radius: var(--border-radius-xlg);
   background-color: var(--background-primary);
+  backdrop-filter: var(--blur);
 
   @include media.tablet {
     grid-template-columns: 20rem;
