--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -52,6 +52,16 @@
   transition-timing-function: $timing;
 }
 
+@mixin transparent-overlay() {
+  &::after {
+    content: '';
+    position: absolute;
+    z-index: -1;
+    inset: 0;
+    background-color: var(--background-primary);
+  }
+}
+
 @mixin visually-hidden {
   position: absolute;
   width: 1px;
