--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -1,3 +1,5 @@
+@use '../abstracts/mixins' as mixins;
+
 html {
   box-sizing: border-box;
   scroll-behavior: smooth;
@@ -18,14 +20,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   overflow-x: hidden;
-
-  &::after {
-    content: '';
-    position: absolute;
-    z-index: -1;
-    inset: 0;
-    background-color: rgb(255 255 255 / 0.1);
-  }
+  @include mixins.transparent-overlay;
 }
 
 ul,
