--- a/src/scss/components/_settings.scss
+++ b/src/scss/components/_settings.scss
@@ -10,6 +10,7 @@
   border-radius: var(--border-radius-xlg);
   color: var(--text-primary);
   background-color: var(--background-primary);
+  backdrop-filter: var(--blur);
 
   @include media.tablet {
     max-width: 32rem;
@@ -91,7 +92,7 @@
     padding-left: 1.5rem;
     font-size: var(--font-size-md);
     font-weight: var(--font-weight-regular);
-    border: none;
+    border: 1px solid var(--border-color);
     border-radius: var(--border-radius-sm);
     color: var(--text-primary);
     background-color: var(--background-primary);
