refactor: Update timer styling

--- a/src/scss/components/_timer.scss
+++ b/src/scss/components/_timer.scss
@@ -62,6 +62,7 @@
     cx: var(--cx);
     cy: var(--cy);
     r: var(--r);
+    stroke: var(--text-accent);
     stroke-width: var(--stroke-width);
     stroke-dasharray: var(--stroke-dasharray);
     stroke-dashoffset: var(--stroke-dashoffset);
