style: Refactor timer progress styling
* Add CSS property background-linear-gradient.
* Use ::before and ::after pseudo-elements to create the progress bar.
* Update animation code to work with the new CSS structure.

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -31,6 +31,11 @@
   --background-primary: var(--gray-dark);
   --background-secondary: #292d32;
   --background-accent: var(--accent);
+  --background-linear-gradient: linear-gradient(
+    75deg,
+    rgba(202 184 255) 0%,
+    rgba(174 162 255) 100%
+  );
 
   --border-color: rgb(0 0 0 / 0.1);
 
