--- a/src/scss/components/_timer.scss
+++ b/src/scss/components/_timer.scss
@@ -93,6 +93,19 @@
     letter-spacing: 0.125rem;
   }
 
+  &__buttons {
+    display: flex;
+    column-gap: 2rem;
+
+    @include media.tablet {
+      column-gap: 1.5rem;
+    }
+
+    @include media.mobile {
+      column-gap: 1rem;
+    }
+  }
+
   &__button {
     width: unset;
     height: unset;
@@ -106,6 +119,10 @@
 
     @include media.mobile {
       padding: 0.5rem 1.25rem;
+    }
+
+    &--hide {
+      display: none;
     }
   }
 }
