fix: Use monospace font for timer display

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -5,6 +5,7 @@
 
   /* Fonts */
   --font-family: 'Kanit', sans-serif;
+  --font-family-mono: 'JetBrains Mono', monospace;
 
   --font-weight-regular: 400;
   --font-weight-medium: 500;
