--- a/src/scss/components/_timer.scss
+++ b/src/scss/components/_timer.scss
@@ -89,8 +89,8 @@
     left: 50%;
     z-index: 112;
     translate: -50% -50%;
+    font-family: var(--font-family-mono);
     font-size: var(--fonts-size-lg);
-    letter-spacing: 0.125rem;
   }
 
   &__buttons {
