--- a/src/scss/components/_timer.scss
+++ b/src/scss/components/_timer.scss
@@ -27,7 +27,42 @@
   }
 
   &__title {
+    margin-bottom: 0.75rem;
     font-size: var(--font-size-md);
+  }
+
+  &__pomodoro-counter {
+    @include mixins.flex-center;
+    column-gap: 0.25rem;
+
+    @include media.tablet {
+      column-gap: 0.2rem;
+    }
+
+    @include media.mobile {
+      column-gap: 0.15rem;
+    }
+  }
+
+  &__pomodoro-alarm {
+    & svg {
+      width: 1.5rem;
+      height: 1.5rem;
+
+      @include media.tablet {
+        width: 1.25rem;
+        height: 1.25rem;
+      }
+
+      @include media.mobile {
+        width: 1rem;
+        height: 1rem;
+      }
+    }
+
+    &--is-active {
+      color: var(--text-accent);
+    }
   }
 
   &__content {
