--- a/src/scss/components/_timer.scss
+++ b/src/scss/components/_timer.scss
@@ -7,7 +7,7 @@
   grid-template-columns: 24rem;
   place-items: center;
   row-gap: 3rem;
-  padding: 3.75rem 2.25rem;
+  padding: 4.5rem 2.25rem;
   font-weight: var(--font-weight-medium);
   border: 1px solid var(--border-color);
   border-radius: var(--border-radius-xlg);
@@ -17,13 +17,13 @@
   @include media.tablet {
     grid-template-columns: 20rem;
     row-gap: 2.5rem;
-    padding: 3.25rem 2rem;
+    padding: 4rem 2rem;
   }
 
   @include media.mobile {
     grid-template-columns: 16rem;
     row-gap: 2rem;
-    padding: 2.75rem 1.75rem;
+    padding: 3.5rem 1.75rem;
   }
 
   &__title {
@@ -158,6 +158,22 @@
 
     &--hide {
       display: none;
+    }
+  }
+
+  &__close-button {
+    position: absolute;
+    top: 1.25rem;
+    right: 1.25rem;
+
+    @include media.tablet {
+      top: 1.125rem;
+      right: 1.125rem;
+    }
+
+    @include media.mobile {
+      top: 1rem;
+      right: 1rem;
     }
   }
 }
